--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -19,7 +19,6 @@
   color: #b3b6d4;
   font-size: 1.13rem;
   width: 100%;
- 
 }
 
 .projects-filters {
@@ -73,28 +72,34 @@
 }
 
 .project-content {
-  padding: 1.5rem 1.3rem 1.3rem 1.3rem;
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-
+    padding: 1.5rem 1.3rem 1.3rem 1.3rem;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    text-align: left;
+    max-height: 40vh;
 }
 
 .project-header {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  margin-bottom: 0.7rem;
+  margin-bottom: 2rem;
 }
 
 .project-title {
   color: #fff;
-  font-size: 1.18rem;
+  font-size: 1rem;
   font-weight: 700;
+  width: 100%;
+
 }
 
 .project-tags {
   display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
   gap: 0.5rem;
 }
 
@@ -192,10 +197,7 @@
   .projects-section {
     padding: 2.5rem 0 1rem 0;
   }
-  .projects-title {
-    font-size: 2rem;
-    margin-bottom: 1.2rem;
-  }
+
   .projects-desc {
     font-size: 1rem;
     margin-bottom: 1.2rem;
@@ -227,9 +229,9 @@
     padding: 1rem 0.5rem 0.7rem 0.5rem;
   }
   .project-title {
-    font-size: 0.95rem;
+    font-size: 1.2rem;
     padding: 0.2rem 0.6rem;
-    text-align: center;
+    text-align: left;
     justify-content: center;
   }
   .project-desc {
@@ -249,8 +251,6 @@
   }
   .project-tags {
     display: flex;
-    flex-wrap: wrap;
-     
     gap: 0.5rem 0.7rem;
     margin-bottom: 1.2rem;
     justify-content: center;
@@ -258,7 +258,7 @@
   .project-tag {
 
     padding: 0.2rem 0.2rem;
-    font-size: 0.7rem;
+    font-size: 0.6rem;
     border: solid 1px #a78bfa;
   }
 }
